# QD

./: CMakeLists.txt  README.md  modules.txt
source/: decoder.cpp  decoder.h  decoderpopup.cpp  decoderpopup.h  decoderpopup.ui  ico.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
